--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -38,6 +38,10 @@ body {
   line-height: 30px; /* 166.667% */
 }
 
+section {
+  margin: 130px 0;
+}
+
 /* nav related style */
 
 nav {
@@ -113,11 +117,34 @@ nav a {
 
 /* main related styles */
 
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
 /* about related styles */
 
 .about {
   padding: 130px;
   border-radius: 10px;
   background: #fff8f3;
-  margin: 130px 230px;
+}
+
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.about-info {
+  text-align: center;
+}
+
+/* section related styles */
+
+#what-i-do-description {
+  padding: 30px 150px;
+}
+
+.skill-container {
+  display: flex;
 }
