--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,6 +28,7 @@ body {
   text-align: center;
   font-size: 35px;
   font-weight: 700;
+  margin-bottom: 50px;
 }
 
 .section-description {
@@ -139,12 +140,63 @@ main {
   text-align: center;
 }
 
-/* section related styles */
+/* what i do related styles */
 
 #what-i-do-description {
-  padding: 30px 150px;
+  padding: 0 150px;
+  margin-bottom: 30px;
 }
 
 .skill-container {
   display: flex;
+  gap: 24px;
+}
+
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-title {
+  margin: 20px 0;
+}
+
+.skill-description {
+  color: #757575;
+}
+
+/* resume section styles */
+
+.resume-column-title {
+  /* color: #757575; */
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.resume-container {
+  display: flex;
+  gap: 50px;
+}
+
+.resume-item-institute,
+.resume-item-description {
+  color: #757575;
+}
+
+.resume-item-title {
+  /* color: #757575; */
+  font-size: 25px;
+  font-weight: 700;
+  margin: 10px 0;
+}
+
+.resume-container hr {
+  margin: 30px;
+}
+
+.download-cv {
+  text-align: center;
+  margin: 50px;
 }
